--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,7 @@
         <activity
             android:name=".BusTrackingActivity"
             android:launchMode="singleTop"
+            android:resizeableActivity="false"
             android:clearTaskOnLaunch="false"
             android:screenOrientation="portrait" />
 
