Fixed hanging of map because of empty spinner click

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,12 +145,8 @@
         <activity
             android:name=".BaseActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".BusTrackingActivity"
-            android:launchMode="singleTop"
-            android:resizeableActivity="false"
-            android:clearTaskOnLaunch="false"
-            android:screenOrientation="portrait" />
+
+        <activity android:name=".BusTrackingActivityDuplicate" />
 
         <meta-data
             android:name="preloaded_fonts"
