New map activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,7 +147,7 @@
             android:screenOrientation="portrait" />
 
         <activity android:name=".BusTrackingActivityDuplicate" />
-
+        <activity android:name=".MapActivity"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
