--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.github.AsyncTaskCoffee:AndroidOfflineMapLibrary:v1'
-    implementation 'com.github.MKergall:osmbonuspack:6.6.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.firebase:firebase-functions:19.0.2'
@@ -88,15 +86,14 @@ dependencies {
     implementation 'com.daimajia.easing:library:2.1@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
 
-    implementation 'com.google.firebase:firebase-core:17.4.2'
-    implementation 'org.osmdroid:osmdroid-android:6.1.6'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.firebase:firebase-messaging:20.2.0'
-    /*implementation 'com.google.firebase:firebase-analytics:17.4.2'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'*/
+    implementation 'com.google.firebase:firebase-messaging:20.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.android.volley:volley:1.1.1'
@@ -114,7 +111,8 @@ dependencies {
     implementation files('libs/com.sahurjt.objectcsv.jar')
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-
+    implementation 'commons-net:commons-net:3.6'
+    implementation 'com.github.instacart.truetime-android:library:3.3'
     //check once after updating the library as 1.2.0 not working!
     implementation 'androidx.browser:browser:1.0.0'
 }
