Completely changed concurrency logic. Guarantees a low risk of unexpected behaviour. Fixed Light StatusBar font, and other minor UI bug fixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -150,6 +150,7 @@
 
         <activity
             android:name=".MapActivity"
+            android:theme="@style/AppTheme3"
             android:screenOrientation="portrait" />
 
         <meta-data
